# plant-manager

./: .gitignore  LICENSE  main.c
eda/atmega/: atmega.kicad_pro  atmega.kicad_sch
firmware/atmega/: Dockerfile  Makefile  build-atmega.sh
firmware/atmega/include/: adc.h  config.h  eeprom.h  globals.h  moisture.h  pump.h  twi.h
firmware/atmega/source/: adc.c  eeprom.c  main.c  moisture.c  pump.c  twi.c
firmware/esp32/: CMakeLists.txt  Dockerfile  build-esp32.sh
firmware/esp32/include/: config.h  i2c.hpp  main.hpp  mqtt.hpp  wifi-credentials.h  wifi.hpp
firmware/esp32/main/: CMakeLists.txt  i2c.cpp  main.cpp  mqtt.cpp  wifi.cpp
firmware/esp32/source/: main.cpp  wifi.cpp
src/: Dockerfile  Makefile  main.c  moisture.c  moisture.cpp  moisture.h
src/atmega/: Makefile  build-atmega.sh  config.h  main.c  main.cpp  moisture.c  moisture.cpp  moisture.h
